--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <a href="https://twitter.com/fowobi21/ "><i class="fab fa-twitter fa-1x"></a></i>
                 </div>
                 <div>
-                  <a href="https://www.linkedin.com/in/tosin-odunuga-355054247/"><i
+                  <a href="https://www.linkedin.com/in/tosin-odunuga/"><i
                       class="fab fa-linkedin-in fa-1x"></a></i>
                 </div>
                 <div>
@@ -128,7 +128,7 @@
         <div class="mo-foot">
           <a href="https://facebook.com/Fowobi21_/ "><i class="fab fa-facebook-f"></a></i>
           <a href="https://twitter.com/fowobi21/ "><i class="fab fa-twitter fa-1x"></a></i>
-          <a href="https://www.linkedin.com/in/tosin-odunuga-355054247/"><i class="fab fa-linkedin-in fa-1x"></a></i>
+          <a href="https://www.linkedin.com/in/tosin-odunuga/"><i class="fab fa-linkedin-in fa-1x"></a></i>
           <a href="https://www.instagram.com/fowobi21_/ "><i class="fab fa-instagram fa-1x"></a></i>
           <a href="mailto:achiever317@gmail.com "><i class="fa-regular fa-envelope fa"></a></i>
         </div>
