--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </h1>
 
           <div class="mo-btn">
-            <a href="./resume.html "><button class="mo-resume">Resume</a></button>
+            <a href="https://drive.google.com/file/d/18CgaUpXFwuSpDgyAFaXB682CzkjcbFkF/view?usp=sharing " target="_blank"><button class="mo-resume">Resume</a></button>
             <a href="https://tosin-karma-project.netlify.app/"><button class="mo-project">Projects</a></button>
           </div>
 
