--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           </h1>
 
           <div class="mo-btn">
-            <a href="https://drive.google.com/file/d/18CgaUpXFwuSpDgyAFaXB682CzkjcbFkF/view?usp=sharing "target="_blank"><button class="mo-resume">Resume</a></button>
-            <a href="https://tosin-karma-project.netlify.app/"><button class="mo-project">Projects</a></button>
+            <a href="https://drive.google.com/file/d/1gXXj4G8nAim_czHnIHy-Ao7JIi-qIlsN/view?usp=drive_link"target="_blank"><button class="mo-resume">Resume</a></button>
+            <a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank"><button class="mo-project">Projects</a></button>
           </div>
 
           <nav class="mo-social-media">
@@ -208,8 +208,8 @@
             Here's My Profile.
           </p>
           <div class="desktop-button">
-            <button class="des-resume"><a href="./resume.html">Resume</a></button>
-            <button class="des-project"><a href="https://tosin-karma-project.netlify.app/">Project</a></button>
+            <button class="des-resume"><a href="https://drive.google.com/file/d/1gXXj4G8nAim_czHnIHy-Ao7JIi-qIlsN/view?usp=drive_link" target="_blank">Resume</a></button>
+            <button class="des-project"><a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Group-Project</a></button>
           </div>
           <p class="des-parag">
             A highly skilled trainee of CodeYourFuture and motivated web developer with years of experience in designing
