--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           </p>
           <div class="desktop-button">
             <button class="des-resume"><a href="https://drive.google.com/file/d/1gXXj4G8nAim_czHnIHy-Ao7JIi-qIlsN/view?usp=drive_link" target="_blank">Resume</a></button>
-            <button class="des-project"><a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Group-Project</a></button>
+            <button class="des-project"><a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Project3</a></button>
           </div>
           <p class="des-parag">
             A highly skilled trainee of CodeYourFuture and motivated web developer with years of experience in designing
