--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="overlay-content">
             <a href="./index.html ">About Me</a>
             <a href="./resume.html ">Resume</a>
-            <a href="https://tosin-karma-project.netlify.app/ ">Projects</a>
+            <a href="https://tosin-karma-project.netlify.app/ ">Project</a>
             <a href="./project.html">Project2</a>
           </div>
 
@@ -51,7 +51,7 @@
 
           <div class="mo-btn">
             <a href="https://drive.google.com/file/d/1gXXj4G8nAim_czHnIHy-Ao7JIi-qIlsN/view?usp=drive_link"target="_blank"><button class="mo-resume">Resume</a></button>
-            <a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank"><button class="mo-project">Projects</a></button>
+            <a href="https://tosin-karma-project.netlify.app/"><button class="mo-project">Project</a></button>
           </div>
 
           <nav class="mo-social-media">
@@ -154,7 +154,7 @@
             <ul class="d-nav-items-list">
               <span class="d-nav-list-item"><a href="./index.html ">About Me</a></span>
               <span class="d-nav-list-item"><a href="./resume.html">Resume</a></span>
-              <span class="d-nav-list-item"><a href="https://tosin-karma-project.netlify.app/">Projects</a></span>
+              <span class="d-nav-list-item"><a href="https://tosin-karma-project.netlify.app/">Project</a></span>
               <span class="d-nav-list-item"><a href="./project.html">Project2</a></span>
 
             </ul>
@@ -209,7 +209,7 @@
           </p>
           <div class="desktop-button">
             <button class="des-resume"><a href="https://drive.google.com/file/d/1gXXj4G8nAim_czHnIHy-Ao7JIi-qIlsN/view?usp=drive_link" target="_blank">Resume</a></button>
-            <button class="des-project"><a href="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Project3</a></button>
+            <button class="des-project"><a href="https://tosin-karma-project.netlify.app/">Project</a></button>
           </div>
           <p class="des-parag">
             A highly skilled trainee of CodeYourFuture and motivated web developer with years of experience in designing
