--- a/project.html
+++ b/project.html
@@ -150,7 +150,7 @@
                             <span class="d-nav-list-item"><a href="./index.html">About Me</a></span>
                             <span class="d-nav-list-item"><a href="./resume.html ">Resume</a></span>
                             <span class="d-nav-list-item"><a
-                                    href="https://tosin-karma-project.netlify.app/">Projects</a></span>
+                                    href="https://tosin-karma-project.netlify.app/">Project</a></span>
                             <span class="d-nav-list-item"><a href="./project.html">Project2</a></span>
                         </ul>
                     </nav>
