--- a/project.html
+++ b/project.html
@@ -228,18 +228,18 @@
 
                 <section class="clock-container">
                     <div class="Number Fact">
-                        <!-- <h4 class="desk-clock">Number-Fact</h4>
-                        <p class="num-text-p">Developer used both AJAX and Fetch API, are<br> used for making
+                     <h4 class="desk-clock">Number-Fact</h4>
+                        <!-- <p class="num-text-p">Developer used both AJAX and Fetch API, are<br> used for making
                             asynchronous requests to a<br> server and retrieving data without requiring a
                             page refresh.<br>However, Fetch API is a newer and more<br> modern approach that provides a
                             promise-<br>based interface.
-                        </p> -->
+                        </p>  -->
                     </div>
                     <div class="pet-container">
                         <img class="pet-img"id="petImage" src="" alt="Pet Image">
                         <h2 id="petName"></h2>
                         <p id="petDescription"></p>
-                        <button id="randomButton">Random Pet</button>
+                        <button class="random-btn"id="randomButton">Random Pet</button>
                     </div>
 
                 </section>
