--- a/project.html
+++ b/project.html
@@ -228,7 +228,7 @@
 
                 <section class="clock-container">
                     <div class="Number Fact">
-                     <h4 class="desk-clock">Number-Fact</h4>
+                     <h4 class="desk-clock">My Pet</h4>
                         <!-- <p class="num-text-p">Developer used both AJAX and Fetch API, are<br> used for making
                             asynchronous requests to a<br> server and retrieving data without requiring a
                             page refresh.<br>However, Fetch API is a newer and more<br> modern approach that provides a
