--- a/project.html
+++ b/project.html
@@ -239,7 +239,7 @@
                         <img class="pet-img"id="petImage" src="" alt="Pet Image">
                         <h2 id="petName"></h2>
                         <p id="petDescription"></p>
-                        <button class="random-btn"id="randomButton">Random Pet</button>
+                        <button class="random-btn"id="randomButton">My Pet</button>
                     </div>
 
                 </section>
