--- a/project.html
+++ b/project.html
@@ -156,7 +156,7 @@
                                 <select class="project-drop" id="projectDropdown">
                                     <option value="#">Other-Projects</option>
                                     <option value="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Hotel-Project</option>
-                                    <option value="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">project</option>
+                                    <option value="https://tosin-chat-app.netlify.app/" target="_blank">My Chat App</option>
                                     <option value="https://my-pet-list.netlify.app/" target="_blank">My Pets</option>
                                 </select>
                             </span>
