--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                   <option value="https://glasgow-grouph-hotel-react-project.netlify.app/" target="_blank">Hotel-Project</option>
                   <option value="https://tosin-chat-app.netlify.app/" target="_blank">My Chat App</option>
                   <option value="https://my-pet-list.netlify.app/" target="_blank">My Pets</option>
+                  <option value="https://tosyn-react-tv-project.netlify.app/" target="_blank">My TV Project</option>
                 </select>
               </span>
               
