--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
       <header class="desktop-header">
         <div class="des-head">
           <h1 class="name">
-            Tosin Odunuga
+            Tosin Odunuga 
           </h1>
-          <p class="web"> / Web Developer.</p>
+          <p class="web">Web Developer.</p>
         </div>
 
 
@@ -199,7 +199,7 @@
                     <a href="https://twitter.com/fowobi21/ "><i class="fab fa-twitter fa-1x"></a></i>
                   </div>
                   <div class="des-twitt">
-                    <a href="https://www.linkedin.com/in/tosin-odunuga-355054247/ "><i
+                    <a href="https://www.linkedin.com/in/tosin-odunuga/ "><i
                         class="fab fa-linkedin-in fa-1x"></a></i>
                   </div>
                   <div class="des-twitt">
