--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="card-body" id="skills">
                         <h5 class="card-title">Skills</h5>
                         <p class="card-text">
-                            ● Skilled in software development with specific skills in HTML, CSS, JavaScript, Node.js,
+                            ● Skilled in software development with specific skills in HTML, CSS, JavaScript, Node.js.
                             React, and SQL. <br>
                             ● multilingual <br>
                             ● Strong communication, leadership, and organizational skills. <br>
