--- a/index.html
+++ b/index.html
@@ -80,52 +80,61 @@
                         <div class="collapse" id="collapseDetails">
                             <div class="card-body bg-when-show">
 
-                                "In the course of my professional journey, I have cultivated a
+                                ● In the course of my professional journey, I have cultivated a
                                 diverse set of skills, ranging from office management to
-                                arc welding, extending to more complex fields like psychology and recently, I have
+                                6G arc welding certification, extending to more complex fields like psychology and
+                                recently, I have
                                 developed a keen interest in powerful and promising AI tools.
-
-                                I am particularly
+                                <br>
+                                ● My world is comprised of a few strong elements and fundamental aspects which include
+                                connecting with nature, hitting
+                                the gym, playing chess, and listening to audiobooks. For me, these activities are as
+                                delightful as enjoying coffee with
+                                a piece of cheesecake.
+                                <br>
+                                ● I am particularly
                                 adept at HTML, CSS, JavaScript,
                                 Node.js, React, and SQL databases. I have always been a passionate problem solver. I
                                 find joy in tackling challenges and
-                                delivering innovative solutions to real-world issues. This makes me highly creative and
+                                delivering innovative solutions to real-world issues. This makes me creative and
                                 extends beyond just coding. I'm
                                 enthusiastic about leveraging my creativity to develop new functionalities, services,
                                 and solutions with real impact.
-
-                                As a multilingual professional, I add
+                                <br>
+                                ● As a multilingual professional, I add
                                 diversity to any team. I bring
                                 strong communication and leadership skills, a strong work ethic, and a commitment to
                                 excellence.
-
-                                My adaptability and organization enable me to function effectively within a team
+                                <br>
+                                ● My adaptability and organization enable me to function effectively within a team
                                 environment. Furthermore, my innovation
                                 drives me to continually seek opportunities to bring new and needed functionalities,
                                 services, or products to the real
                                 world through software development. I am always seeking ways to improve existing
                                 processes and systems.
-
-                                As a lifelong learner, I am passionate about staying at the forefront of new
+                                <br>
+                                ● As a lifelong learner, I am passionate about staying at the forefront of new
                                 technologies. For instance, I've
                                 enthusiastically immersed myself in the AI sphere from its early public-access days,
                                 dedicating hours each day to
-                                exploring, learning, and mastering its tools. I firmly believe AI is poised to
+                                exploring, learning, and mastering using its tools. I firmly believe AI is poised to
                                 revolutionize the tech industry and
                                 coding environment, and mastering to use those tools and its potential is a valuable
                                 asset.
 
-                                My unwavering commitment to any project or pursuit I undertake is another key strength.
+                                ● My unwavering commitment to any project or pursuit I undertake is another key
+                                strength.
                                 I subscribe to the mantra of 'go
                                 big or go home.
-
-                                Above all, my enthusiasm for challenges motivates me. I enjoy overcoming obstacles and
+                                <br>
+                                ● Above all, my enthusiasm for challenges motivates me. I enjoy overcoming obstacles and
                                 seeing challenging projects
                                 through to successful completion. Perhaps most importantly, I pride myself on my
                                 adaptability, mental resilience, and
                                 ability to thrive in any situation. I believe these qualities equip me well to make
                                 significant contributions in a
-                                dynamic, forward-thinking environment." </div>
+                                dynamic, forward-thinking environment."
+                            </div>
                         </div>
                         <a href="/Herish Turki - CV.pdf" download="Herish Turki - CV.pdf">Download my CV</a>
                         <br>
@@ -195,9 +204,8 @@
                                 <br>
                                 ● Enthusiasm for Challenges: I am motivated by challenging projects and thrive in
                                 overcoming obstacles to deliver
-                                successful outcomes. My journey of learning to code from scratch to surpassing the
-                                competency of a typical junior
-                                developer within a year stands testament to this trait.
+                                successful outcomes. My journey of learning to code from scratch within a year stands
+                                testament to this trait.
                             </div>
                         </div>
 
@@ -341,5 +349,3 @@
 </body>
 
 </html>
-
-//////
