--- a/project.html
+++ b/project.html
@@ -140,7 +140,7 @@
                     <h1 class="name">
                         Tosin Odunuga
                     </h1>
-                    <p class="web"> / Web Developer.</p>
+                    <p class="web">  Web Developer.</p>
                 </div>
 
 
