--- a/resume.html
+++ b/resume.html
@@ -165,13 +165,14 @@
         </div>
 
         <!-- Desktop-Version  -->
+
         <div class="super-desktop-container">
             <header class="desktop-header">
                 <div class="des-head">
                     <h1 class="name">
                         Tosin Odunuga
                     </h1>
-                    <p class="web"> / Web Developer.</p>
+                    <p class="web">  Web Developer.</p>
                 </div>
 
 
